Fix login image on safari

--- a/css/reaction.css
+++ b/css/reaction.css
@@ -218,6 +218,7 @@ fieldset {
   align-items: center;
 }
 #identity img {
+  height: 24px;
   width: 24px;
   margin-right: 8px;
   border-radius: 12px;
